ext/odbc/php_odbc.c
@@ -20,7 +20,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: php_odbc.c,v 1.185 2005/01/18 15:03:51 tony2001 Exp $ */
+/* $Id: php_odbc.c,v 1.186 2005/06/02 15:40:45 tony2001 Exp $ */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -2479,8 +2479,10 @@ PHP_FUNCTION(odbc_next_result)
 			result->values = NULL;
 		}
 		RETURN_TRUE;
-	}
-	else {
+	} else if (rc == SQL_NO_DATA_FOUND) {
+		RETURN_FALSE;
+	} else {
+		odbc_sql_error(result->conn_ptr, result->stmt, "SQLMoreResults");
 		RETURN_FALSE;
 	}
 }
